adding editing files

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d BLOG-WITH-DATABASE-STARTING-FILES"
   },
   "author": "",
   "license": "ISC",
+  "homepage": "https://github.com/mrfunky69/Blog-website",
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
